--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-gesture-handler": "^2.20.1",
+    "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.11.1",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-svg": "^15.8.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -32,6 +36,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
