--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "react": "18.3.1",
     "react-native": "0.75.4",
-    "react-native-gesture-handler": "^2.20.1",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.0",
     "react-native-status-bar-height": "^2.6.0",
